--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -1,5 +1,5 @@
 @import 'foundation';
-@import "font-awesome";
+@import 'font-awesome';
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
